trusty-demonstration/resources/trusty-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: trusty-ingress
spec:
  backend:
    serviceName: trusty
    servicePort: 8080
