trusty-demonstration/resources/trusty-ui-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kogito-trusty-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: trusty-ui.kogito
      http:
        paths:
          - path: /
            backend:
              serviceName: trusty-ui
              servicePort: 8080
